<resources>
    <string name="app_name">MyColorsApp</string>

    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="brown">Brown</string>
    <string name="light_yellow">Light Yellow</string>
    <string name="cyan">Cyan</string>
    <string name="pink">Pink</string>
    <string name="light_green">Light Green</string>
    <string name="apricot">Apricot</string>
    <string name="magenta">Magenta</string>
    <string name="black">Black</string>
    <string name="gray">Gray</string>
    <string name="white">White</string>
    <string name="alpha">Alpha</string>
    <string name="transparent">Transparent</string>
    <string name="semitransparent">Semitransparent</string>
    <string name="opaque">Opaque</string>
    <string name="about_of">About of</string>
    <string name="selColorHeaderTitle">Select a color</string>
    <string name="createdByTitle">Created by:</string>
    <string name="author">Iván Camilo Narváez Vanegas</string>
    <string name="ageTitle">21 years old</string>
    <string name="careerTitle">Systems engineering</string>
    <string name="emailOfAuthor">ivannarvaez774@hotmail.com</string>
    <string name="firstname">First name</string>
    <string name="firstname_placeholder">Write your first name</string>
    <string name="lastname">Last name</string>
    <string name="lastname_placeholder">Write your last name</string>
    <string name="email">E-mail</string>
    <string name="email_placeholder">Write your e-mail</string>
    <string name="password">Password</string>
    <string name="pass_placeholder">Write your password</string>
    <string name="signup">Sign up</string>
</resources>
